// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Dimmer ColorePrimario 1`] = `
<div>
  <div>
    <div
      class="mt-3 fade"
    >
      <div
        class="dimmer dimmer-primary"
        style="display: flex;"
      >
        <div
          class="dimmer-inner"
        >
          <div
            class="dimmer-icon"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M16.5 12H16V6c0-2.2-1.8-4-4-4S8 3.8 8 6v3h1V6c0-1.7 1.3-3 3-3s3 1.3 3 3v6H7.5c-.6 0-1.1.5-1.1 1.1v6.8c0 .6.5 1.1 1.1 1.1h9c.6 0 1.1-.5 1.1-1.1v-6.8c0-.6-.5-1.1-1.1-1.1zm.1 7.9c0 .1 0 .1-.1.1h-9c-.1 0-.1 0-.1-.1v-6.8h9.2v6.8zM13 15.5c0 .3-.2.7-.5.8v1.5h-1v-1.5c-.3-.1-.5-.5-.5-.8 0-.6.4-1 1-1s1 .4 1 1z"
              />
            </svg>
          </div>
          <p>
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </p>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12 col-lg-4"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-12 col-lg-4 d-none d-lg-block"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-12 col-lg-4 d-none d-lg-block"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dimmer DimmerConAzioni 1`] = `
<div>
  <div>
    <div
      class="mt-3 fade"
    >
      <div
        class="dimmer"
        style="display: flex;"
      >
        <div
          class="dimmer-inner"
        >
          <div
            class="dimmer-icon"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M16.5 12H16V6c0-2.2-1.8-4-4-4S8 3.8 8 6v3h1V6c0-1.7 1.3-3 3-3s3 1.3 3 3v6H7.5c-.6 0-1.1.5-1.1 1.1v6.8c0 .6.5 1.1 1.1 1.1h9c.6 0 1.1-.5 1.1-1.1v-6.8c0-.6-.5-1.1-1.1-1.1zm.1 7.9c0 .1 0 .1-.1.1h-9c-.1 0-.1 0-.1-.1v-6.8h9.2v6.8zM13 15.5c0 .3-.2.7-.5.8v1.5h-1v-1.5c-.3-.1-.5-.5-.5-.8 0-.6.4-1 1-1s1 .4 1 1z"
              />
            </svg>
          </div>
          <h4>
            Titolo Dimmer
          </h4>
          <div
            class="dimmer-buttons bg-dark"
          >
            <button
              class="btn btn-outline-primary"
            >
              Azione secondaria
            </button>
            <button
              class="btn btn-primary"
            >
              Azione primaria
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="col-12 col-lg-4"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-12 col-lg-4 d-none d-lg-block"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dimmer DimmerConAzioniColorePrimario 1`] = `
<div>
  <div>
    <div
      class="mt-3 fade"
    >
      <div
        class="dimmer dimmer-primary"
        style="display: flex;"
      >
        <div
          class="dimmer-inner"
        >
          <div
            class="dimmer-icon"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M16.5 12H16V6c0-2.2-1.8-4-4-4S8 3.8 8 6v3h1V6c0-1.7 1.3-3 3-3s3 1.3 3 3v6H7.5c-.6 0-1.1.5-1.1 1.1v6.8c0 .6.5 1.1 1.1 1.1h9c.6 0 1.1-.5 1.1-1.1v-6.8c0-.6-.5-1.1-1.1-1.1zm.1 7.9c0 .1 0 .1-.1.1h-9c-.1 0-.1 0-.1-.1v-6.8h9.2v6.8zM13 15.5c0 .3-.2.7-.5.8v1.5h-1v-1.5c-.3-.1-.5-.5-.5-.8 0-.6.4-1 1-1s1 .4 1 1z"
              />
            </svg>
          </div>
          <h4>
            Titolo Dimmer
          </h4>
          <div
            class="dimmer-buttons bg-dark single-button"
          >
            <button
              class="btn btn-primary"
            >
              Azione primaria
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col"
    >
      <div
        class="col-12 col-lg-4"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-12 col-lg-4 d-none d-lg-block"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Dimmer Esempi 1`] = `
<div>
  <div>
    <div
      class="mt-3 fade"
    >
      <div
        class="dimmer"
        style="display: flex;"
      >
        <div
          class="dimmer-inner"
        >
          <div
            class="dimmer-icon"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M16.5 12H16V6c0-2.2-1.8-4-4-4S8 3.8 8 6v3h1V6c0-1.7 1.3-3 3-3s3 1.3 3 3v6H7.5c-.6 0-1.1.5-1.1 1.1v6.8c0 .6.5 1.1 1.1 1.1h9c.6 0 1.1-.5 1.1-1.1v-6.8c0-.6-.5-1.1-1.1-1.1zm.1 7.9c0 .1 0 .1-.1.1h-9c-.1 0-.1 0-.1-.1v-6.8h9.2v6.8zM13 15.5c0 .3-.2.7-.5.8v1.5h-1v-1.5c-.3-.1-.5-.5-.5-.8 0-.6.4-1 1-1s1 .4 1 1z"
              />
            </svg>
          </div>
          <p>
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </p>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12 col-lg-4"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-12 col-lg-4 d-none d-lg-block"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-12 col-lg-4 d-none d-lg-block"
      >
        <div
          class="card-wrapper"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h5
                class="card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
